fixing the scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,22 +6,24 @@
   padding: 0;
 }
 
-html, body {
+html {
   height: 100%;
-  overflow-x: hidden;
-  background-color: #191d1c;
+  overflow-y: hidden;
   color: #ffffff;
 }
 
-body {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+.body {
+  height: 100%;
+  overflow-y: hidden;
+  color: #ffffff;
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+  background: #191d1c;
 }
 
-body::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, and Opera */
+.body::-webkit-scrollbar {
+  display: none; 
 }
-
 
 
 .navbar .dropdown-menu{
